force-app/main/default/objects/Confluence_Event__c/Confluence_Event__c.object-meta.xml
<CustomObject>
    <label>Confluence Event</label>
    <nameField>
        <displayFormat>CE-{0000}</displayFormat>
        <label>Confluent Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Confluence Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>