force-app/main/default/objects/Confluence_Event__c/fields/Confluence_Page_ID__c.field-meta.xml
<CustomField>
    <fullName>Confluence_Page_ID__c</fullName>
    <label>Confluence Page ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>