force-app/main/default/objects/Confluence_Event__c/fields/External_Confluence_Key__c.field-meta.xml
<CustomField>
    <fullName>External_Confluence_Key__c</fullName>
    <externalId>true</externalId>
    <label>External Confluence Key</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>