force-app/main/default/objects/Confluence_Event__c/fields/Page_Content__c.field-meta.xml
<CustomField>
    <fullName>Page_Content__c</fullName>
    <label>Page Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>