force-app/main/default/objects/Confluence_Event__c/fields/Page_Title__c.field-meta.xml
<CustomField>
    <fullName>Page_Title__c</fullName>
    <label>Page Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>