force-app/main/default/objects/Confluence_Event__c/fields/Space_Key__c.field-meta.xml
<CustomField>
    <fullName>Space_Key__c</fullName>
    <label>Space Key</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>